# embedded-camsense-x1

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: main.yml
examples/: README.md
examples/esp32c3/: Cargo.toml
examples/esp32c3/src/: main.rs
examples/linux/: Cargo.toml  README.md
examples/linux/src/: lib.rs  main.rs
examples/raspberrypi/: Cargo.toml  Cross.toml  README.md
examples/raspberrypi/.cargo/: config.toml
examples/raspberrypi/cad/: RPILidarCase.FCStd
examples/raspberrypi/src/: lib.rs  main.rs
src/: camsense_x1.rs  config.rs  constants.rs  driver.rs  lib.rs  state_machine.rs  types.rs
src/camsense_x1/: state_machine.rs
src/driver/: device.rs
