[package]
name = "embedded-camsense-x1"
version = "0.1.0"
edition = "2024"
description = "Platform-agnostic Rust driver for the Camsense X1 LiDAR sensor."
authors = ["Anes Benmerzoug <anes.benmerzoug@gmail.com>"]
repository = "https://github.com/AnesBenmerzoug/embedded-camsense-x1"
homepage = "https://github.com/AnesBenmerzoug/embedded-camsense-x1"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [
    "camsense-x1",
    "lidar",
    "distance-sensor",
    "embedded-hal",
    "embedded-hal-driver",
]
categories = ["embedded", "hardware-support", "no-std"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
embedded-hal = "~1.0.0"
embedded-hal-async = { version = "~1.0.0", optional = true }
embedded-io-async = { version = "~0.7.0", optional = true }
embedded-io = "~0.7.1"
micromath = "~2.1.0"
bisync = "0.3.0"
defmt = { version = "~1.1.0", optional = true }

[features]
defmt = ["dep:defmt", "embedded-hal/defmt-03", "embedded-io/defmt", "embedded-hal-async?/defmt-03", "embedded-io-async?/defmt"]
async = ["dep:embedded-hal-async", "dep:embedded-io-async"]

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }
rstest = "0.26.1"
