[package]
edition = "2021"
name = "raspberrypi"
rust-version = "1.86"
version = "0.1.0"

[[bin]]
name = "raspberrypi"
path = "./src/main.rs"

[dependencies]
rppal = { version = "0.22.1", features = ["embedded-hal"] }
embedded-camsense-x1 = { path = "../.." }
embedded-io = "0.7.1"
egui_plot = "0.33.0"
egui = "0.32.3"
eframe = "0.32.3"
